--- a/README.Rmd
+++ b/README.Rmd
@@ -2,18 +2,43 @@
 title: "R Notebook"
 output: html_notebook
 ---
+# Project Zero 
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
+This project is concerned with looking at evolutionary signatures of selection on immune-associated genes, both canonical and candidate. All immune genes (canon/noncanon) are based on orthologs from Apis mellifera (Amel_HAv3.1, NCBI genome).
 
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd+Shift+Enter*. 
+Two types of analyses have been previously ran using PAML's module, codeml, using gene product codon alignments consisting of 11 bee species, including Apis mellifera. Gene sets are divided into "immunity" and "random", with immunity consisting of "canon" and "non-canon". All alignments consist of 1-1 single-copy orthologs present in all 11 species. Those that did not include all species were dropped.
 
-```{r}
-plot(cars)
+Evolutionary rate of each gene product was estimated using a codeml run that considers the whole gene product across the given phylogeny as a whole. It is not expected to get dN/dS ratio (omega) values anywhere near 1 (positive selection) using this method as site-specific signals of selection will be likely lost as the ratio is averaged along the length of the product. Instead, this is expected to offer a relative scale of evolutionary rate.
+
+The main analysis consisted of branch-site specific analyses of selection wherein the phylogenetic tree was designated a target, splitting the tree into foreground and background. Codeml then estimates omega value for foreground branches relative to background. For the purposes of this project, each of the designations correspond with the origin or elaboration of social living, to assess if and how these changes in lifestyle affected selection on immune and candidate immune genes in the bees, relative to other genes (the "random" set, which encompass all orthologs that could be made from all proteins in Apis mellifera using the ortholog bash script, OrthoScript [imaginitively named]).
+
+In the null version of this test, omega ratios on the foreground branches are fixed at 1, with the alternative version starting with omega estimates above 1 (a direct test of positive selection). Each model results in a global maximum log likelihoood score which can then be compared using a LRT.
+
+LRT = (lnLAlt - lnLNull)*2
+
+LRT scores can then be compared to a chi-square distribution with 1 degree of freedom to assess significance. LRT scores above 3.84 are considered significant. 
+
+P-values will be adjusted using during this analysis to correct for multiple testing using the Benjamini-Hochburg procedure.
+
+#Setting the Verse
+
+In order to annotate the data with class of gene, description of gene (as it is described in Apis mellifera), etc. we first need a "dataverse" of Amel_HAv3.1.
+
+
+```{r, include=FALSE}
+source("verseSet.R", local = knitr::knit_global())
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
+GeneVerse: created by reading in a file with all genes from Amel HAv3.1 complete with gene product description and transcript ID.
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Cmd+Shift+K* to preview the HTML file). 
+```{r}
+head(gene.verse)
+```
 
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+ImmVerse: created by reading in a file with all immune - associated genes used as the input for the orthologue finding program which created the codon alignments used in the codeml branch-site selection analyses, complete with classifications, transcript, peptide and gene IDs.
+
+```{r}
+head(imm.verse)
+```
+
 
