General spell/grammar check.

--- a/ProjNotes.Rmd
+++ b/ProjNotes.Rmd
@@ -4,13 +4,13 @@ output: html_notebook
 ---
 ## Project Notes 
 
-This project is concerned with looking at evolutionary signatures of selection on immune-associated genes, both canonical and candidate. All immune genes (canon/noncanon) are based on orthologs from Apis mellifera (Amel_HAv3.1, NCBI genome).
+This project is concerned with looking at evolutionary signatures of selection on immune-associated genes, both canonical and candidate. All immune genes (canon/noncanon) are based on orthologs from *Apis mellifera* (Amel_HAv3.1, NCBI genome).
 
-Two types of analyses have been previously ran using PAML's module, codeml, using gene product codon alignments consisting of 11 bee species, including Apis mellifera. Gene sets are divided into "immunity" and "random", with immunity consisting of "canon" and "non-canon". All alignments consist of 1-1 single-copy orthologs present in all 11 species. Those that did not include all species were dropped.
+Two types of analyses have been previously ran using PAML's module, codeML, using gene product codon alignments consisting of 11 bee species, including *Apis mellifera*. Gene sets are divided into "immunity" and "random", with immunity consisting of "canon" and "non-canon". All alignments consist of 1-1 single-copy orthologs present in all 11 species. Those that did not include all species were dropped.
 
 Evolutionary rate of each gene product was estimated using a codeml run that considers the whole gene product across the given phylogeny as a whole. It is not expected to get dN/dS ratio (omega) values anywhere near 1 (positive selection) using this method as site-specific signals of selection will be likely lost as the ratio is averaged along the length of the product. Instead, this is expected to offer a relative scale of evolutionary rate.
 
-The main analysis consisted of branch-site specific analyses of selection wherein the phylogenetic tree was designated a target, splitting the tree into foreground and background. Codeml then estimates omega value for foreground branches relative to background. For the purposes of this project, each of the designations correspond with the origin or elaboration of social living, to assess if and how these changes in lifestyle affected selection on immune and candidate immune genes in the bees, relative to other genes (the "random" set, which encompass all orthologs that could be made from all proteins in Apis mellifera using the ortholog bash script, OrthoScript [imaginitively named]).
+The main analysis consisted of branch-site specific analyses of selection wherein the phylogenetic tree was designated a target, splitting the tree into foreground and background. CodeML then estimates omega value for foreground branches relative to background. For the purposes of this project, each of the designations correspond with the origin or elaboration of social living, to assess if and how these changes in lifestyle affected selection on immune and candidate immune genes in the bees, relative to other genes (the "random" set, which encompass all orthologs that could be made from all proteins in Apis mellifera using the ortholog bash script, OrthoScript [imaginitively named]).
 
 A list of all of the designations and the input newick formats is available in Genome_Misc/tree_designations.txt. I.e.
 
@@ -25,7 +25,7 @@ LRT = (lnLAlt - lnLNull)*2
 
 LRT scores can then be compared to a chi-square distribution with 1 degree of freedom to assess significance. LRT scores above 3.84 are considered significant. 
 
-P-values will be adjusted using during this analysis to correct for multiple testing using the Benjamini-Hochburg procedure.
+P-values will be adjusted during this analysis to correct for multiple testing using the Benjamini-Hochburg procedure.
 
 ##Setting the Verse
 
@@ -44,7 +44,7 @@ GeneVerse: created by reading in a file with all genes from Amel HAv3.1 complete
 head(gene.verse)
 ```
 
-ImmVerse: created by reading in a file with all immune - associated genes used as the input for the orthologue finding program which created the codon alignments used in the codeml branch-site selection analyses, complete with classifications, transcript, peptide and gene IDs.
+ImmVerse: created by reading in a file with all immune - associated genes used as the input for the ortholog finding program which created the codon alignments used in the codeML branch-site selection analyses, complete with classifications, transcript, peptide and gene IDs.
 
 ```{r}
 head(imm.verse)
@@ -76,7 +76,7 @@ head(data[[2]])
 
 ###Tests of significance
 
-ChiSig.R uses the LRT scores and a Chi square distribution (one-tailed, one degree of freedom) to produce pvalues. Pvalues below 0.05 are considered significant (before correction for multiple testing).
+SigTest.R uses the LRT scores and a Chi square distribution (one-tailed, one degree of freedom) to produce pvalues. Pvalues below 0.05 are considered significant (before correction for multiple testing).
 
 To correct for multiple testing, I'll be using the Benjamini-Hochburg procedure.
 
@@ -121,7 +121,7 @@ head(data[[4]])
 
 ## Compare Immunity and Random
 
-First off I'm going to combine the random and immune data and put them back into a list of dataframe environment.
+First off I'm going to combine the random and immune data and put them back into a list of dataframes.
 
 ```{r}
 data <- rbind(data.imm, data.ran)
@@ -179,6 +179,8 @@ I will have to double check if the Fisher's test is still appropriate now that t
 
 Using the same contigency tables used above, I will be running ChiSq tests of significance. As in some of these cases the sample frequencies are heavily imbalanced (i.e 5 canonical immune genes under selection versus ~6000 random genes not under selection), I will be simulating the pvalue by Monte Carlo simulation (x10000). 
 
+adjChi.R will run this test and results will appear in the environment in chi.adj.results.
+
 ```{r}
 source("Scripts/adjChi.R", local = knitr::knit_global())
 ```
@@ -204,11 +206,11 @@ test <- data[["CorbSoc"]]
 nrow(test[test$adj_pvalue < 0.05,])
 ```
 
-This means I would be making a "population" of all the genes that were tested (this will be very slightly different for each origin of sociality as some genes failed in some origins that worked in others, etc) and then sampling 12 genes at random. The number of canon or noncanon genes will be returned, before the genes are replaced and sampling occurs again, x100,000.
+This means I would be making a "population" of all the genes that were tested (this will be very slightly different for each origin of sociality as some branch site analyses for some genes failed in some origins that worked in others, etc) and then sampling 12 genes at random. The number of canon or noncanon genes will be returned, before the genes are replaced and sampling occurs again, x100,000.
 
 From this I should get a distribution with other descriptive statistics including confidence intervals, against which I can then say whether the number of genes of each class under selection differ from what can be expected by chance (by random sampling).
 
-The script has been written so that 100,000 iterations x social origin x class of gene (canon / noncanon) iterations will take place, with results being stored in bootstrap.results. Off to make a cup of tea.
+The script has been written so that 100,000 iterations x social origin x class of gene (canon / noncanon) iterations will take place, with results being stored in boot.results. Off to make a cup of tea.
 
 ```{r}
 source("Scripts/bootstrap.R", local = knitr::knit_global())
@@ -218,7 +220,7 @@ source("Scripts/bootstrap.R", local = knitr::knit_global())
 boot.results
 ```
 
-So, as in the case of the Fisher's test and the Chisq simulated tests, there appears to be no significant relationship between the fact that genes either are or are suspected to be functionally immune and the number of said genes being under selection. The number of genes found to be under selection is no more or less than what you'd expect by chance, evena fter 100000 random sampling iterations.
+So, as in the case of the Fisher's test and the Chisq simulated tests, there appears to be no significant relationship between the fact that genes either are or are suspected to be functionally immune and the number of said genes being under selection. The number of genes found to be under selection is no more or less than what you'd expect by chance, as seen after 100000 random sampling iterations.
 
 That took a full 2 hrs to run (tbf it was 18 million iterations in total) and so I need to have this saved asap.
 
