--- a/GO_Analysis.Rmd
+++ b/GO_Analysis.Rmd
@@ -3,7 +3,7 @@ title: "GO:Analysis"
 output: html_notebook
 ---
 
-I'm going to start by makeing tables of genes of interest - meaning all genes that have appeared as under selection in more than one lineage. I will do this separately for solitary and social lineages before combining at the end. 
+I'm going to start by making tables of genes of interest - meaning all genes that have appeared as under selection in more than one lineage. I will do this separately for solitary and social lineages before combining at the end. 
 
 GO analysis will be ran on canon / noncanon / random genes under selection per lineage. Go terms can then be checked for comparisons between socialities, etc.
 
@@ -114,12 +114,16 @@ undersel.all$count <- str_count(undersel.all$SocOrigin, pattern = ",")+1
 tail(undersel.all)
 ```
 
-Out of all the genes assessed, 1950 genes total were found under positive selection.
+Out of all the genes assessed across all the different lineages, 1950 genes total were found to be showing signs of being under positive selection.
 
 ```{r}
-
+undersel.all.can <- undersel.all[undersel.all$Class == "Canon",]
+nrow(undersel.all.can)
 ```
 
+```{r}
+head(undersel.all.can)
+```
 
 
 Assign function to the canonical immune genes and save
@@ -132,6 +136,106 @@ head(imm.fun)
 
 
 ```{r}
+undersel.all.can <- merge(undersel.all.can, imm.fun, by = "Gene")
+head(undersel.all.can)
+```
 
+```{r}
+summary(as.factor(undersel.all.can$Function))
+```
+
+```{r}
+write.table(undersel.all.can, "output/CanonUnderSel.tsv", row.names = F, quote = F, sep = "\t")
+```
+
+Out of curiosity, I wonder how this comparison works looking at the proportion of genes found to be under selection versus how many were considered . . . 
+
+```{r}
+func.list <- droplevels(as.factor(imm.fun$Function[!duplicated(imm.fun$Function)]))
+func.list
+```
+
+```{r}
+can.prop <- data.frame(matrix(ncol = 0, nrow = 0))
+
+for (i in 1:length(func.list)){
+  func <- func.list[i]
+  desc <- paste(func)
+  tot <- nrow(imm.fun[imm.fun$Function == paste(func),])
+  sel <- nrow(undersel.all.can[undersel.all.can$Function == paste(func),])
+  prop <- sel/tot
+  comb <- cbind(desc, tot, sel, prop)
+  can.prop <- rbind(can.prop, comb)
+}
+
+can.prop
+```
+
+So the highest proportion of canon immune genes under selection are those involved in the JNK pathway. 
+
+##GO Analysis
+
+The first step here will be making gene lists of genes under selection per each lineage, separated by class of gene (noncanon candidate / random background). There will be a file called Hym_NonCan I will also look at - these are the noncanon genes that are only found in Hymenoptera and not in other insect species considered (see previous project for details). I will also be running a GO analysis of all canon immune genes and all candidate immune genes to see if there is much overlap in terms of gene function. NB: gene lists must be in the form of their associated protein's ID. 
+
+Once the lists are complete, I will write them as text files and save them in "input/GOI/" to be fed into GO analysis scripts (topGO). Results will be written as results files, before I make a master file of all GOterms over represented per lineage per class of gene. 
+
+This can then be used for comparative means - Venn tables, etc.
+
+
+###Gene Lists
+
+####Canon and Noncanon (all)
+
+These are just lists of all canon and non canon immune genes to look and see if they have much in common.
+
+```{r}
+head(imm.verse)
+```
+
+Canon
+
+```{r}
+can.list <- as.data.frame(imm.verse$ProteinID[imm.verse$Class == "Canon"])
+
+write.table(can.list, "input/GOI/Canon_input.txt", col.names = F, quote = F, row.names = F)
+```
+
+... and candidate (noncanon)
+
+```{r}
+non.list <- as.data.frame(imm.verse$ProteinID[imm.verse$Class == "NonCanon"])
+non.list <- as.data.frame(non.list[!duplicated(non.list$`imm.verse$ProteinID[imm.verse$Class == "NonCanon"]`),])
+write.table(non.list, "input/GOI/NonCan_input.txt", col.names = F, quote = F, row.names = F)
+```
+
+####Genes under selection
+
+I will craft a script that will go through the undersel object and drag out the genes under selection per lineage per gene class (noncan / random). Each set will be stored in a data.frame object and then written as a .txt file in the "input/GOI" directory. 
+
+As everything has to be in protein ID format, I'll need a master ID table ready that is isoform reduced.
+
+```{r}
+iso.verse <- read.table("Genome_Misc/AmelHAv3.1_filtered.checked.faa.table", header = T, quote = "")
+head(iso.verse)
+```
+
+Looking at this has highlighted an issue - there's a number of alignments in here which come from non-coding transcripts orginally. At the very least I need to be able to highlight them or else remove them entirely. 
+
+This is more important for the immune stuff so I'll look at that first.
+
+```{r}
+imm.nc <- read.table("Genome_Misc/ImmRun_noncoding_list.txt", header = F)
+imm.nc
+```
+
+```{r}
+gene<-strsplit(as.character(imm.nc$V1),".",fixed = T)
+imm.nc$Gene<-sapply(gene,"[",1)
+imm.nc$V1 <- NULL
+nrow(imm.nc)
+```
+
+```{r}
+nrow(undersel.all[undersel.all$Gene %in% imm.nc$Gene,])
 ```
 
